tests/baselines/reference/ifElseWithStatements9.errors.txt
tests/cases/compiler/ifElseWithStatements9.ts(22,5): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(24,9): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(26,13): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(28,17): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(32,13): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(34,13): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(38,17): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(40,13): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(42,9): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
tests/cases/compiler/ifElseWithStatements9.ts(44,5): error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
  Invalid assignment of type PM1 tot type PM2. Check if predicates are correct


==== tests/cases/compiler/ifElseWithStatements9.ts (10 errors) ====
    interface PM1 {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        or(present(text), not(present(text)));
    }
    interface PM2 {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        present(text);
        or(and(present(userid), not(present(screenname))),
            and(not(present(userid)), present(screenname)));
    }
    
    function bar(pm2: PM2) {
        pm2.text;
    }
    let pm1: PM1 = {};
    bar(pm1); //NOK
        ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
    if (pm1.text) {
        bar(pm1); //NOK
            ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
        if (pm1.screenname) {
            bar(pm1); //NOK
                ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
            if (pm1.userid) {
                bar(pm1); //NOK
                    ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
            } else {
                bar(pm1); //OK
            }
            bar(pm1); //NOK
                ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
        } else {
            bar(pm1); //NOK
                ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
            if (pm1.userid) {
                bar(pm1); //OK
            } else {
                bar(pm1); //NOK
                    ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
            }
            bar(pm1); //NOK
                ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
        }
        bar(pm1); //NOK
            ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct
    }
    bar(pm1); //NOK
        ~~~
!!! error TS2345: Argument of type 'PM1' is not assignable to parameter of type 'PM2'.
!!! error TS2345:   Invalid assignment of type PM1 tot type PM2. Check if predicates are correct